# TCPRemoteDeviceControlSystem

./: .gitignore  CMakeLists.txt  README.md  build.sh  execution_process.txt  raspberrypi4_toolchain.cmake
client/: CMakeLists.txt  main.c
common/: app_config.c  app_config.h  command.c  command.h
docs/: main.typ  template.typ
server/: CMakeLists.txt  main.c  parsing.c  parsing.h  server_log.c  server_log.h  socket.c  socket.h
server/device/: CMakeLists.txt  device_manager.c  device_manager.h  device_result.c  device_result.h  device_worker.c  device_worker.h  plugin_loader.c  plugin_loader.h  plugin_registry.c  plugin_registry.h
server/device/buzzer/: CMakeLists.txt  buzzer.c  buzzer.h  pitch_detector.c  pitch_detector.h  wav_reader.c  wav_reader.h
server/device/led/: CMakeLists.txt  led.c  led.h
server/device/light/: CMakeLists.txt  light.c  light.h
server/device/segment/: CMakeLists.txt  segment.c  segment.h
